--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.google.guava:guava:19.0'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.jakewharton:butterknife:8.1.0'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile project(':libFacebookSDK-release')
     compile project(':libviewpageindicator-release')
     compile project(':libaFileChooser-release')
@@ -36,4 +30,12 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.assertj:assertj-core:1.7.1'
 
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:preference-v7:23.4.0'
+    compile 'com.google.guava:guava:19.0'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.jakewharton:butterknife:8.1.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.android.support:support-v4:23.4.0'
 }
