--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,48 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.nla.tarotdroid"
+<manifest package="org.nla.tarotdroid"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          android:installLocation="auto"
           android:versionCode="34"
-          android:versionName="4.0.3"
-          android:installLocation="auto">
+          android:versionName="4.0.3">
 
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/icon_lite" android:theme="@style/Theme.TarotDroid" android:name=".app.LiteApp" android:debuggable="true" >
-        <activity   android:name="org.achartengine.GraphicalActivity" />
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.MainPreferencesActivity"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.TabGameSetPreferencesActivity"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.TabGameSetActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.TabViewSettingsActivity"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.GameSetChartListActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.GameSetChartViewPagerActivity" android:screenOrientation="landscape"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.GameSetHistoryActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.NewGameSetDashboardActivity"  android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.GameSetCreationActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.PlayerListActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.PlayerStatisticsActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.GameCreationActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.GameReadViewPagerActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.DisplayAndRemoveGameDialogActivity" android:theme="@style/Theme.TarotDroid.Dialog" android:configChanges="keyboardHidden|orientation"/>
-        <activity   android:name="org.nla.tarotdroid.lib.ui.PlayerPickerActivity"/>
-        <activity   android:name="org.nla.tarotdroid.lib.ui.PlayerSelectorActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity   android:name="org.nla.tarotdroid.lib.ui.NotificationActivity"/>
-
-        <activity 	android:name="org.nla.tarotdroid.lib.ui.MainDashboardActivity" android:configChanges="keyboardHidden|orientation" android:label="@string/app_name">
+    <application
+        android:name=".app.LiteApp"
+        android:debuggable="true"
+        android:icon="@drawable/icon_lite"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.TarotDroid">
+        <activity android:name="org.achartengine.GraphicalActivity"/>
+        <activity android:name=".lib.ui.MainPreferencesActivity"/>
+        <activity android:name=".lib.ui.TabGameSetPreferencesActivity"/>
+        <activity
+            android:name=".lib.ui.TabGameSetActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity android:name=".lib.ui.TabViewSettingsActivity"/>
+        <activity
+            android:name=".lib.ui.GameSetChartListActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name=".lib.ui.GameSetChartViewPagerActivity"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".lib.ui.GameSetHistoryActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name=".lib.ui.NewGameSetDashboardActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name=".lib.ui.GameSetCreationActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name=".lib.ui.PlayerListActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name=".lib.ui.PlayerStatisticsActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name=".lib.ui.GameCreationActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name=".lib.ui.GameReadViewPagerActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity
+            android:name=".lib.ui.DisplayAndRemoveGameDialogActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:theme="@style/Theme.TarotDroid.Dialog"/>
+        <activity android:name=".lib.ui.PlayerPickerActivity"/>
+        <activity
+            android:name=".lib.ui.PlayerSelectorActivity"
+            android:configChanges="keyboardHidden|orientation"/>
+        <activity android:name=".lib.ui.NotificationActivity"/>
+        <activity
+            android:name=".lib.ui.MainDashboardActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name="org.acra.CrashReportDialog"
+            android:excludeFromRecents="true"
+            android:finishOnTaskLaunch="true"
+            android:launchMode="singleInstance"
+            android:theme="@android:style/Theme.Dialog"/>
 
-        <activity android:name="org.acra.CrashReportDialog" android:theme="@android:style/Theme.Dialog" android:launchMode="singleInstance" android:excludeFromRecents="true" android:finishOnTaskLaunch="true" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id"/>
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        <activity android:name="com.facebook.LoginActivity" android:label="@string/app_name"/>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name"/>
     </application>
+
 </manifest>
