--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,10 @@ android {
         versionName "5.0.0"
     }
     buildTypes {
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -30,6 +34,8 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.assertj:assertj-core:1.7.1'
 
+    compile 'ch.acra:acra:4.9.0'
+    //compile 'org.achartengine:achartengine:1.2.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:preference-v7:23.4.0'
     compile 'com.google.guava:guava:19.0'
