--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,9 @@ android {
         targetSdkVersion 23
         versionCode 35
         versionName "5.0.0"
+        multiDexEnabled true
     }
     buildTypes {
-        debug {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -36,12 +33,15 @@ dependencies {
 
     compile 'ch.acra:acra:4.9.0'
     //compile 'org.achartengine:achartengine:1.2.0'
+    compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:preference-v7:23.4.0'
+//    compile 'com.android.support:preference-v7:23.4.0'
+    compile 'com.takisoft.fix:preference-v7:23.4.0.5'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.google.guava:guava:19.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.jakewharton:butterknife:8.1.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.android.support:support-v4:23.4.0'
+//    compile 'com.takisoft.fix:preference-v7:24.2.0.0'
 }
