--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            url "https://repository-achartengine.forge.cloudbees.com/snapshot/"
-        }
+//        maven {
+//            url "https://repository-achartengine.forge.cloudbees.com/snapshot/"
+//      }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
