Removed all traces of old facebook sdk

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':libFacebookSDK-release', ':libviewpageindicator-release', ':libaFileChooser-release'
+include ':app', ':libviewpageindicator-release', ':libaFileChooser-release'
