--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':libviewpageindicator-release')
     compile project(':libaFileChooser-release')
 
     // tests
@@ -30,17 +29,20 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.assertj:assertj-core:1.7.1'
 
-    compile 'ch.acra:acra:4.9.0'
-    //compile 'org.achartengine:achartengine:1.2.0'
+    // android
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
 //    compile 'com.android.support:preference-v7:23.4.0'
     compile 'com.takisoft.fix:preference-v7:23.4.0.5'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.google.guava:guava:19.0'
+
+    // autres
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.guava:guava:19.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.jakewharton:butterknife:8.1.0'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-//    compile 'com.takisoft.fix:preference-v7:24.2.0.0'
+    compile 'ch.acra:acra:4.9.0'
+//    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+//    compile 'org.achartengine:achartengine:1.2.0'
 }
