--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,33 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        lite {
+            applicationId "org.nla.tarotdroid"
+            resValue "string", "app_name", "TarotDroid"
+            buildConfigField "boolean", "IS_IN_DEBUG_MODE", "false"
+            buildConfigField "boolean", "IS_FULL", "false"
+        }
+        liteAndDebug {
+            applicationId "org.nla.tarotdroid"
+            resValue "string", "app_name", "TarotDroid"
+            buildConfigField "boolean", "IS_IN_DEBUG_MODE", "true"
+            buildConfigField "boolean", "IS_FULL", "false"
+        }
+        full {
+            applicationId "org.nla.tarotdroid.full"
+            resValue "string", "app_name", "TarotDroid Full"
+            buildConfigField "boolean", "IS_IN_DEBUG_MODE", "false"
+            buildConfigField "boolean", "IS_FULL", "true"
+        }
+        fullAndDebug {
+            applicationId "org.nla.tarotdroid.full"
+            resValue "string", "app_name", "TarotDroid Full"
+            buildConfigField "boolean", "IS_IN_DEBUG_MODE", "true"
+            buildConfigField "boolean", "IS_FULL", "true"
+        }
+    }
 }
 
 dependencies {
@@ -35,7 +62,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
-//    compile 'com.android.support:preference-v7:23.4.0'
     compile 'com.takisoft.fix:preference-v7:23.4.0.5'
 
     // autres
@@ -43,8 +69,9 @@ dependencies {
     compile 'com.google.guava:guava:19.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'ch.acra:acra:4.9.0'
-//    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-//    compile 'org.achartengine:achartengine:1.2.0'
+    compile 'com.google.dagger:dagger:2.5'
+    provided 'javax.annotation:jsr250-api:1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    apt 'com.google.dagger:dagger-compiler:2.5'
 }
