--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
-        android:name=".app.LiteApp"
+        android:name=".LiteApp"
         android:icon="@drawable/icon_lite"
         android:label="@string/app_name"
         android:theme="@style/Theme.TarotDroid">
