--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
-        android:name=".LiteApp"
+        android:name=".TarotDroidApp"
         android:icon="@drawable/icon_lite"
         android:label="@string/app_name"
         android:theme="@style/Theme.TarotDroid">
@@ -85,7 +85,10 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id"/>
-
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="dd38dd735f1aa5146e772a3cb865d52c335cf248"
+            />
     </application>
 
 </manifest>
