--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
         versionName "5.0.0"
         multiDexEnabled true
         buildConfigField "String", "APP_LOG_TAG", "\"${applicationId}\""
+        buildConfigField "String", "APP_VERSION", "\"${versionName}\""
+        buildConfigField "String", "BLUETOOTH_UUID", "\"00001101-0000-1000-8000-00805F9B34FB\""
+        buildConfigField "String", "BLUETOOTH_SERVICE", "\"TarotDroidService\""
     }
 
     buildTypes {
