--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,11 +65,6 @@
             android:name=".dashboard.MainDashboardActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity
             android:name="org.acra.CrashReportDialog"
@@ -83,8 +78,17 @@
             android:value="@string/app_id"/>
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="dd38dd735f1aa5146e772a3cb865d52c335cf248"
-            />
+            android:value="dd38dd735f1aa5146e772a3cb865d52c335cf248"/>
+
+        <activity
+            android:name=".splash.SplashActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/SplashTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
