--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,4 +101,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.3@aar') {
         transitive = true;
     }
+    compile 'com.flurry.android:analytics:6.3.1'
+    compile 'net.sourceforge.jexcelapi:jxl:2.6.12'
 }
