--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
         multiDexEnabled true
 
         resValue "string", "app_name", "TarotDroid"
+        resValue "string", "fabric_api_key", "dd38dd735f1aa5146e772a3cb865d52c335cf248"
         buildConfigField "String", "APP_LOG_TAG", "\"${applicationId}\""
         def playStoreAppUrl = playStoreBaseUrl + applicationId
         buildConfigField "boolean", "IS_FULL", "false"
@@ -99,6 +100,9 @@ dependencies {
     compile 'com.google.dagger:dagger:2.5'
     provided 'javax.annotation:jsr250-api:1.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.3@aar') {
+        transitive = true;
+    }
+    compile('com.crashlytics.sdk.android:answers:1.3.10@aar') {
         transitive = true;
     }
     compile 'com.flurry.android:analytics:6.3.1'
