Created a gameset package + removed the infamous static getInstance() on TabGameSetActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:configChanges="keyboardHidden|orientation"
             android:theme="@style/Theme.TarotDroid.Dialog"/>
         <activity
-            android:name=".dashboard.PlayerSelectorActivity"
+            android:name=".gameset.CreateGameSetActivity"
             android:configChanges="keyboardHidden|orientation"/>
         <activity
             android:name=".dashboard.MainDashboardActivity"
