--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,12 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.TarotDroid">
         <activity android:name="org.achartengine.GraphicalActivity"/>
-        <activity android:name=".dashboard.MainPreferencesActivity"/>
-        <activity android:name=".gameset.TabGameSetPreferencesActivity"/>
+        <activity
+            android:name=".dashboard.MainPreferencesActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".gameset.TabGameSetPreferencesActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".gameset.TabGameSetActivity"
             android:configChanges="keyboardHidden|orientation"/>
@@ -27,42 +31,42 @@
             android:screenOrientation="landscape"/>
         <activity
             android:name=".history.GameSetHistoryActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".dashboard.NewGameSetDashboardActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".players.PlayerListActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".players.PlayerStatisticsActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".gameset.StandardGameActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".gameset.BelgianGameActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".gameset.PassActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".gameset.PenaltyActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".gameset.GameReadViewPagerActivity"
             android:configChanges="keyboardHidden|orientation"/>
         <activity
             android:name=".gameset.DisplayAndRemoveGameDialogActivity"
-            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TarotDroid.Dialog"/>
         <activity
             android:name=".gameset.CreateGameSetActivity"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".dashboard.MainDashboardActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="org.acra.CrashReportDialog"
@@ -77,6 +81,7 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="dd38dd735f1aa5146e772a3cb865d52c335cf248"/>
+
         <activity
             android:name=".splash.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
